gekürzt und klarerer Namen_js

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
           <div class="fieldStyle">
             <p>Mehrwertsteuersatz</p>
             <div class="radio">
-              <input type="radio" name="tax" id="radio19" value="19" />
+              <input type="radio" name="tax" id="salesTax19" value="19" />
               <label for=""> 19 %</label>
-              <input type="radio" name="tax" id="radio7" value="7" />
+              <input type="radio" name="tax" id="salesTax7" value="7" />
               <label for=""> 7 %</label>
             </div>
             <hr />
           </div>
           <div class="inputField">
-            <p id="auswahlFrage"></p>
-            <input type="number" id="userInput" />
+            <p id="calculatedSalesTax"></p>
+            <input type="number" id="amountInput" />
             <button id="btn" onclick="calculate()">Berechnen</button>
           </div>
           <div class="finalPrice">
